2008-07-29  Richard M Kreuter <kreuter@progn.net>

	* swank-sbcl.lisp (add-sigio-handler, add-fd-handler): Be quiet
	as a workaround for non-properly initialized *debug-io*.

2008-07-29  Richard M Kreuter <kreuter@progn.net>

	Fix slime-quit-lisp in non-default REPL buffer.

	* slime.el (slime-quit-lisp): Killing the REPL buffer also removes
	the buffer local binding of slime-buffer-connection.  Remember the
	connection before killing the buffer.

2008-07-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (swank-compiler): Fix bug when invoking an abort
	restart on a failed compilation attempt.

	* swank-sbcl.lisp (swank-compile-string): If a compilation attempt
	fails, COMPILE-FILE returns NIL which we tried to LOAD. Fix that.

	* swank-backend.lisp (swank-compile-string, swank-compile-file):
	Document return value.

2008-07-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-loader.lisp (*contribs*): Added `swank-package-fu'.

2008-07-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-at-list-p): New. Returns t if point is at a list.
	(slime-at-expression-p): New. Similiar to `slime-in-expression-p'.
	(slime-end-of-list): New. Pendant to `slime-beginning-of-list'.

2008-07-19  Tobias C. Rittweiler  <tcr@freebits.de>

	REPL shortcuts now leave an appropriate Common Lisp form in the
	REPL history.

	* slime.el (slime-within-repl-shortcut-handler-p): New global. T
	if truly inside a repl shortcut handler invoked by ,foo on the
	REPL.
	(slime-handle-repl-shortcut): Bind above global appropriatly.
	(slime-repl-shortcut-eval): New; should be used in repl shortcut
	handlers instead of `slime-eval'.
	(slime-repl-shortcut-eval-async): New; should be used in repl
	shortcut handlers instead of `slime-eval-async'.
	(defslime-repl-shortcut): Update docstring.
	(slime-repl-set-package): Use slime-repl-shortcut-eval.
	(slime-set-default-directory): Ditto.
	(slime-sync-package-and-default-directory): Ditto.
